[tool.poetry]
name = "eliteproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
autocorrect = "^2.2.2"
textblob = "^0.15.3"
spellchecker = "^0.4"
py = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
